<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/messages_header">

        <Preference
            app:key="export"
            app:title="@string/export_bookmarks"
                />
        <Preference
            app:key="import"
            app:title="@string/import_bookmarks"
            />
        <SwitchPreferenceCompat
            app:key="useDarkTheme"
            app:title="Use dark theme"
            />
        <Preference
            app:key="downloadMetadataForAll"
            android:title="Download missing metadata"
            />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="syncOnStart"
            app:title="Sync bookmarks on startup" />
        <Preference
            app:dependency="sync"
            app:title="Sync now"
            app:key="syncNow"
            />
    </PreferenceCategory>

</PreferenceScreen>