<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ktdefter.defter.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="collapseActionView|ifRoom" />
    <group android:id="@+id/sort">

        <item
            android:id="@+id/sortByName"
            android:checkable="true"
            android:title="@string/sort_by_name" />
        <item
            android:id="@+id/sortDirection"
            android:checkable="true"
            android:title="@string/reverse_sort" />

    </group>
    <group
        android:id="@+id/multiple_selection"
        android:visible="false">
        <item
            android:id="@+id/action_delete"
            android:orderInCategory="100"
            android:title="@string/delete"
            app:showAsAction="always" />
    </group>

</menu>
